--- a/faszienballset.html
+++ b/faszienballset.html
@@ -9,7 +9,7 @@
             <meta name="msapplication-TileColor" content="#da532c">
             <meta name="theme-color" content="#ffffff">
             <title>Contenance.</title>
-            <link href="style.css" rel="stylesheet" />
+            <link href="style4.css" rel="stylesheet" />
             <link href="style-product.css" rel="stylesheet" />
             <link href="https://fonts.googleapis.com/css2?family=PT+Sans" rel="stylesheet">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +19,7 @@
     <body>
         <div class="opacitylayer"></div>
         <div class ="menumobile">
-            <a class="link link-mobile" href="./behind.html">BEHIND</a> 
+            <a class="link link-mobile" href="./behind.html">CONTENANCE.</a> 
             <div class="products-mobile">
                 <a class="link link-mobile"  id="link-back-mobile"><i class="arrow-mobile arrow-mobile-close"></i>ZURÜCK</a>
                 <a class="link link-mobile" href="./korkset.html">YOGA KORK SET</a>
@@ -35,7 +35,7 @@
         </div>
         <div id="header">
             <a id="link-home" class="link" href="./index.html">
-                <h1 id="name-home">Contenance.</h1>
+                <img id="image-logo" src="./media/logo1.png" alt="Italian Trulli">
             </a>
             <div id="menuitem">
                     <div class="menuitembar"></div>
@@ -43,7 +43,7 @@
                     <div class="menuitembar"></div>
             </div>
             <div id="menu">
-                <a id="link-behind" class="link" href="./behind.html">BEHIND</a>
+                <a id="link-behind" class="link" href="./behind.html">CONTENANCE.</a>
                 <div class="dropdown">
                     <a id="link-products" class="dropbtn link">OUR PRODUCTS<i class="arrow"></i></a>
                     <div class="dropdown-content">
@@ -54,83 +54,86 @@
                 </div>
             </div>
         </div>
-        <div id="content">
-            <div class="title-product">FASZIEN-BALL SET</div>
-            <div class="container-product container-product-amazon">
-                <img class="image-product" src="./media/balls.png" alt="Italian Trulli">
-                <div class="product-info product-info-amazon">
-                        <div class="info-title">Contenance.® Premium Faszien-Ball Set: Einzelball, Duoball &amp; Igelball mit Nylonbeutel – Für Wohlbefinden, Regeneration &amp; Leistungssteigerung der Muskeln.</div>
-                        <div class="info-subtitle">EUR 24,95</div>
-                        <a target="_blank" class="link link-amazon" href="https://www.amazon.de/Contenance-%C2%AE-Premium-Faszien-Ball-Set-Leistungssteigerung/dp/B07F47L2Q5/ref=sr_1_1?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=contenance+faszien&qid=1601658942&sr=8-1">
-                            <img class="image-amazon" src="./media/amazon.svg" alt="Italian Trulli">
-                            <div class="buy-amazon">Jetzt Kaufen</div>
-                        </a>
+        <div id="container-content">
+            <div id="content">
+                    <div class="title-product">FASZIEN-BALL SET</div>
+                    <div class="container-product container-product-amazon">
+                        <img class="image-product" src="./media/balls.png" alt="Italian Trulli">
+                        <div class="product-info product-info-amazon">
+                                <div class="info-title">Contenance.® Premium Faszien-Ball Set: Einzelball, Duoball &amp; Igelball mit Nylonbeutel – Für Wohlbefinden, Regeneration &amp; Leistungssteigerung der Muskeln.</div>
+                                <div class="info-subtitle">EUR 24,95</div>
+                                <a target="_blank" class="link link-amazon" href="https://www.amazon.de/Contenance-%C2%AE-Premium-Faszien-Ball-Set-Leistungssteigerung/dp/B07F47L2Q5/ref=sr_1_1?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=contenance+faszien&qid=1601658942&sr=8-1">
+                                    <img class="image-amazon" src="./media/amazon.svg" alt="Italian Trulli">
+                                    <div class="buy-amazon">Jetzt Kaufen</div>
+                                </a>
+                        </div>
+                    </div>
+                    <div class="container-product container-product-small">
+                        <img class="image-product image-product-small" src="./media/ball1.jpg" alt="Italian Trulli">
+                        <div class="product-info product-info-right">
+                                <div class="info-title info-title-list">Duo-Ball (Peanut Ball)</div>
+                                <ul class="info-list">
+                                    <li>14cm Durchmesser</li>
+                                    <li>Material: Silikone/Kunststoff</li>
+                                    <li>für einseitiges Rollen</li>
+                                    <li>sehr effizient für den gesamten Wirbelsäulenbereich (Lendenwirbelbereich, Brustwirbelbereich, Halswirbelbereich)</li>
+                                    <li>sehr effizient für den Nacken und entlang der Gliedmaßen</li>
+                                </ul>
+                        </div>
+                    </div>
+                    <div class="container-product container-product-small">
+                        <div class="product-info">
+                                <div class="info-title info-title-list">Einzel-Ball (Lacrosse Ball)</div>
+                                <ul class="info-list">
+                                    <li>6,3cm Durchmesser</li>
+                                    <li>Material: Silikone/Kunststoff</li>
+                                    <li>für flächiges Rollen</li>
+                                    <li>optimal für die Fußsohlenmassage (Plantarfaszie)</li>
+                                    <li>Ferse, Wade, Oberschenkel, Gesäß, Hüfte und Becken</li>
+                                    <li>Rippenbogen, Brust, Schulter</li>
+                                    <li>Oberarm und Elbogen, Unterarm und Handgelenk, Handballen</li>
+                                    <li>Gesicht, Schläfe und Kiefer</li>
+                                </ul>
+                        </div>
+                        <img class="image-product image-product-small-right" src="./media/ball2.jpg" alt="Italian Trulli">
+                    </div>
+                    <div class="container-product container-product-small">
+                        <img class="image-product image-product-small" src="./media/ball3.jpg" alt="Italian Trulli">
+                        <div class="product-info product-info-right">
+                                <div class="info-title info-title-list">Igel-Ball (Spiky Ball)</div>
+                                <ul class="info-list">
+                                    <li>9cm Durchmesser</li>
+                                    <li>Material: Kunststoff</li>
+                                    <li>für kreisendes Rollen</li>
+                                    <li>zur Anwendung für den ganzen Körper (optimal für die Selbstmassage)</li>
+                                    <li>Stimulation von Muskeln und Reflexzonen (z.B. Fußreflexzonenmassage)</li>
+                                    <li>eine trockene Haut sorgt für mehr Halt</li>
+                                    <li>perfekt zur Kräftigung und Entspannung verkrampfter Handmuskulatur durch kreisende druckvolle Bewegungen beider Hände über den Ball</li>
+                                </ul>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="container-product container-product-small">
-                <img class="image-product image-product-small" src="./media/ball1.jpg" alt="Italian Trulli">
-                <div class="product-info product-info-right">
-                        <div class="info-title info-title-list">Duo-Ball (Peanut Ball)</div>
-                        <ul class="info-list">
-                            <li>14cm Durchmesser</li>
-                            <li>Material: Silikone/Kunststoff</li>
-                            <li>für einseitiges Rollen</li>
-                            <li>sehr effizient für den gesamten Wirbelsäulenbereich (Lendenwirbelbereich, Brustwirbelbereich, Halswirbelbereich)</li>
-                            <li>sehr effizient für den Nacken und entlang der Gliedmaßen</li>
-                        </ul>
-                </div>
-            </div>
-            <div class="container-product container-product-small">
-                <div class="product-info">
-                        <div class="info-title info-title-list">Einzel-Ball (Lacrosse Ball)</div>
-                        <ul class="info-list">
-                            <li>6,3cm Durchmesser</li>
-                            <li>Material: Silikone/Kunststoff</li>
-                            <li>für flächiges Rollen</li>
-                            <li>optimal für die Fußsohlenmassage (Plantarfaszie)</li>
-                            <li>Ferse, Wade, Oberschenkel, Gesäß, Hüfte und Becken</li>
-                            <li>Rippenbogen, Brust, Schulter</li>
-                            <li>Oberarm und Elbogen, Unterarm und Handgelenk, Handballen</li>
-                            <li>Gesicht, Schläfe und Kiefer</li>
-                        </ul>
-                </div>
-                <img class="image-product image-product-small-right" src="./media/ball2.jpg" alt="Italian Trulli">
-            </div>
-            <div class="container-product container-product-small">
-                <img class="image-product image-product-small" src="./media/ball3.jpg" alt="Italian Trulli">
-                <div class="product-info product-info-right">
-                        <div class="info-title info-title-list">Igel-Ball (Spiky Ball)</div>
-                        <ul class="info-list">
-                            <li>9cm Durchmesser</li>
-                            <li>Material: Kunststoff</li>
-                            <li>für kreisendes Rollen</li>
-                            <li>zur Anwendung für den ganzen Körper (optimal für die Selbstmassage)</li>
-                            <li>Stimulation von Muskeln und Reflexzonen (z.B. Fußreflexzonenmassage)</li>
-                            <li>eine trockene Haut sorgt für mehr Halt</li>
-                            <li>perfekt zur Kräftigung und Entspannung verkrampfter Handmuskulatur durch kreisende druckvolle Bewegungen beider Hände über den Ball</li>
-                        </ul>
-                </div>
-            </div>
         </div>
         <div id = "footer">
-            <div class="footer-colomn">
-                <div class="footer-title">CONTENANCE</div>
-                <div>A Berlin based Sports Brand.</div>
+                <div class="footer-colomn">
+                    <img id="image-logo-footer" src="./media/logo5.png" alt="Italian Trulli">
+                    <div>A Berlin based Sports Brand.</div>
+                </div>
+                <div class="footer-colomn">
+                    <div class="footer-title">INFO</div>
+                    <a class="link link-footer">Kontakt</a>
+                    <a class="link link-footer">Support</a>
+                    <a class="link link-footer">AGB's</a>
+                    <a class="link link-footer">Impressum</a>
+                    <a class="link link-footer">Datenschutzerklärung</a>
+                </div>
+                <div class="footer-colomn">
+                    <div class="footer-title">SOCIALMEDIA</div>
+                    <a class="link link-social" href="facebook.com"><img class="image-social" src="./media/instagram-white.png" alt="Italian Trulli"><div class="text-social">Instagram</div></a>
+                    <a class="link link-social" href="facebook.com"><img class="image-social" src="./media/facebook-white.png" alt="Italian Trulli"><div class="text-social">Facebook</div></a>
+                    <a class="link link-social" href="facebook.com"><img class="image-social" src="./media/amazon-white.png" alt="Italian Trulli"><div class="text-social">Amazon</div></a>
+                </div>
             </div>
-            <div class="footer-colomn">
-                <div class="footer-title">INFO</div>
-                <a class="link link-footer">Kontakt</a>
-                <a class="link link-footer">Support</a>
-                <a class="link link-footer">AGB's</a>
-                <a class="link link-footer">Impressum</a>
-                <a class="link link-footer">Datenschutzerklärung</a>
-            </div>
-            <div class="footer-colomn">
-                <div class="footer-title">SOCIALMEDIA</div>
-                <a class="link link-footer" href="facebook.com">Facebook</a>
-                <a class="link link-footer" href="instagram.com">Instagram</a>
-            </div>
-        </div>
 
     </body>
     <script> </script>
