--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <meta name="msapplication-TileColor" content="#da532c">
             <meta name="theme-color" content="#ffffff">
             <title>Contenance.</title>
-            <link href="style.css" rel="stylesheet" />
+            <link href="style4.css" rel="stylesheet" />
             <link href="https://fonts.googleapis.com/css2?family=PT+Sans" rel="stylesheet">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -18,7 +18,7 @@
     <body>
         <div class="opacitylayer"></div>
         <div class ="menumobile">
-            <a class="link link-mobile" href="./behind.html">BEHIND</a> 
+            <a class="link link-mobile" href="./behind.html">CONTENANCE.</a> 
             <div class="products-mobile">
                 <a class="link link-mobile"  id="link-back-mobile"><i class="arrow-mobile arrow-mobile-close"></i>ZURÜCK</a>
                 <a class="link link-mobile" href="./korkset.html">YOGA KORK SET</a>
@@ -34,7 +34,7 @@
         </div>
         <div id="header">
             <a id="link-home" class="link" href="./index.html">
-                <h1 id="name-home">Contenance.</h1>
+                <img id="image-logo" src="./media/logo1.png" alt="Italian Trulli">
             </a>
             <div id="menuitem">
                     <div class="menuitembar"></div>
@@ -42,7 +42,7 @@
                     <div class="menuitembar"></div>
             </div>
             <div id="menu">
-                <a id="link-behind" class="link" href="./behind.html">BEHIND</a>
+                <a id="link-behind" class="link" href="./behind.html">CONTENANCE.</a>
                 <div class="dropdown">
                     <a id="link-products" class="dropbtn link">OUR PRODUCTS<i class="arrow"></i></a>
                     <div class="dropdown-content">
@@ -53,28 +53,31 @@
                 </div>
             </div>
         </div>
-        <div id="content">
-            <img id="image-home" src="./media/elefant1.jpg" alt="Italian Trulli">
+        <div id="container-content">
+            <div id="content">
+                <img id="image-home" src="./media/elefant1.jpg" alt="Italian Trulli">
+            </div>
         </div>
         <div id = "footer">
-            <div class="footer-colomn">
-                <div class="footer-title">CONTENANCE</div>
-                <div>A Berlin based Sports Brand.</div>
+                <div class="footer-colomn">
+                    <img id="image-logo-footer" src="./media/logo5.png" alt="Italian Trulli">
+                    <div>A Berlin based Sports Brand.</div>
+                </div>
+                <div class="footer-colomn">
+                    <div class="footer-title">INFO</div>
+                    <a class="link link-footer">Kontakt</a>
+                    <a class="link link-footer">Support</a>
+                    <a class="link link-footer">AGB's</a>
+                    <a class="link link-footer">Impressum</a>
+                    <a class="link link-footer">Datenschutzerklärung</a>
+                </div>
+                <div class="footer-colomn">
+                    <div class="footer-title">SOCIALMEDIA</div>
+                    <a class="link link-social" href="facebook.com"><img class="image-social" src="./media/instagram-white.png" alt="Italian Trulli"><div class="text-social">Instagram</div></a>
+                <a class="link link-social" href="facebook.com"><img class="image-social" src="./media/facebook-white.png" alt="Italian Trulli"><div class="text-social">Facebook</div></a>
+                <a class="link link-social" href="facebook.com"><img class="image-social" src="./media/amazon-white.png" alt="Italian Trulli"><div class="text-social">Amazon</div></a>
+                </div>
             </div>
-            <div class="footer-colomn">
-                <div class="footer-title">INFO</div>
-                <a class="link link-footer">Kontakt</a>
-                <a class="link link-footer">Support</a>
-                <a class="link link-footer">AGB's</a>
-                <a class="link link-footer">Impressum</a>
-                <a class="link link-footer">Datenschutzerklärung</a>
-            </div>
-            <div class="footer-colomn">
-                <div class="footer-title">SOCIALMEDIA</div>
-                <a class="link link-footer" href="facebook.com">Facebook</a>
-                <a class="link link-footer" href="instagram.com">Instagram</a>
-            </div>
-        </div>
 
     </body>
     <script> </script>
