--- a/index4.html
+++ b/index4.html
@@ -53,8 +53,10 @@
                 </div>
             </div>
         </div>
-        <div id="content">
-            <img id="image-home" src="./media/elefant1.jpg" alt="Italian Trulli">
+        <div id="container-content">
+            <div id="content">
+                <img id="image-home" src="./media/elefant1.jpg" alt="Italian Trulli">
+            </div>
         </div>
         <div id = "footer">
                 <div class="footer-colomn">
