--- a/index5.html
+++ b/index5.html
@@ -9,8 +9,7 @@
             <meta name="msapplication-TileColor" content="#da532c">
             <meta name="theme-color" content="#ffffff">
             <title>Contenance.</title>
-            <link href="style4.css" rel="stylesheet" />
-            <link href="style-product.css" rel="stylesheet" />
+            <link href="style5.css" rel="stylesheet" />
             <link href="https://fonts.googleapis.com/css2?family=PT+Sans" rel="stylesheet">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -54,29 +53,8 @@
                 </div>
             </div>
         </div>
-        <div id="container-content">
-            <div id="content">
-                <div class="title-product">YOGA KORK BLOCK</div>
-                <div class="container-product container-product-amazon">
-                    <img class="image-product" src="./media/korkset7.jpg" alt="Italian Trulli">
-                    <div class="product-info product-info-amazon">
-                            <div class="info-title">Contenance.® Yoga Block aus Naturkork – robust &amp; rutschfest – für Stabilität &amp; Gleichgewicht.</div>
-                            <div class="info-subtitle">EUR 14,95</div>
-                            <a target="_blank" class="link link-amazon" href="https://www.amazon.de/Contenance-%C2%AE-Yoga-Block-Naturkork-Gleichgewicht/dp/B088Q2WXS9/ref=sr_1_3?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=contenance+kork&qid=1601640143&sr=8-3">
-                                <img class="image-amazon" src="./media/amazon.svg" alt="Italian Trulli">
-                                <div class="buy-amazon">Jetzt Kaufen</div>
-                            </a>
-                    </div>
-                </div>
-                <div class="container-product container-product-small">
-                    <img class="image-product image-product-small" src="./media/korkset8.jpg" alt="Italian Trulli">
-                    <div class="product-info product-info-right">
-                            <div class="info-title">STABILITÄT &amp; GLEICHGEWICHT</div>
-                            <div class="info-subtitle">Der Yoga Kork Block</div>
-                            <div class="info-text">Yoga Kork Blöcke unterstützen dabei die Körperhaltung zu stabilisieren und einen sicheren Stand zu erlangen, wodurch Verletzung und Überbelastung vorgebeugt und jedem erlaubt wird sicher und gestützt in schwierige Haltungen zukommen und das Potential aus jeder Übung auszuschöpfen. </div>
-                    </div>
-                </div>
-            </div>
+        <div id="content">
+            <img id="image-home" src="./media/elefant1.jpg" alt="Italian Trulli">
         </div>
         <div id = "footer">
                 <div class="footer-colomn">
@@ -94,8 +72,8 @@
                 <div class="footer-colomn">
                     <div class="footer-title">SOCIALMEDIA</div>
                     <a class="link link-social" href="facebook.com"><img class="image-social" src="./media/instagram-white.png" alt="Italian Trulli"><div class="text-social">Instagram</div></a>
-                    <a class="link link-social" href="facebook.com"><img class="image-social" src="./media/facebook-white.png" alt="Italian Trulli"><div class="text-social">Facebook</div></a>
-                    <a class="link link-social" href="facebook.com"><img class="image-social" src="./media/amazon-white.png" alt="Italian Trulli"><div class="text-social">Amazon</div></a>
+                <a class="link link-social" href="facebook.com"><img class="image-social" src="./media/facebook-white.png" alt="Italian Trulli"><div class="text-social">Facebook</div></a>
+                <a class="link link-social" href="facebook.com"><img class="image-social" src="./media/amazon-white.png" alt="Italian Trulli"><div class="text-social">Amazon</div></a>
                 </div>
             </div>
 
