--- a/faszienballset.html
+++ b/faszienballset.html
@@ -112,9 +112,18 @@
                                 </ul>
                         </div>
                     </div>
+                    <div class="container-product container-product-amazon">
+                        <div class="product-info product-info-amazon">
+                            <a target="_blank" class="link link-amazon" href="https://www.amazon.de/Contenance-%C2%AE-Yoga-Block-Naturkork-Gleichgewicht/dp/B088Q2WXS9/ref=sr_1_3?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=contenance+kork&qid=1601640143&sr=8-3">
+                                <img class="image-amazon" src="./media/amazon.svg" alt="Italian Trulli">
+                                <div class="buy-amazon">Jetzt Kaufen</div>
+                            </a>
+                        </div>
+                    </div>
                 </div>
         </div>
-        <div id = "footer">
+        <div id = "footer-container">
+            <div id = "footer">
                 <div class="footer-colomn">
                     <img id="image-logo-footer" src="./media/logo5.png" alt="Italian Trulli">
                     <div>A Berlin based Sports Brand.</div>
@@ -130,10 +139,11 @@
                 <div class="footer-colomn">
                     <div class="footer-title">SOCIALMEDIA</div>
                     <a class="link link-social" href="facebook.com"><img class="image-social" src="./media/instagram-white.png" alt="Italian Trulli"><div class="text-social">Instagram</div></a>
-                    <a class="link link-social" href="facebook.com"><img class="image-social" src="./media/facebook-white.png" alt="Italian Trulli"><div class="text-social">Facebook</div></a>
-                    <a class="link link-social" href="facebook.com"><img class="image-social" src="./media/amazon-white.png" alt="Italian Trulli"><div class="text-social">Amazon</div></a>
+                <a class="link link-social" href="facebook.com"><img class="image-social" src="./media/facebook-white.png" alt="Italian Trulli"><div class="text-social">Facebook</div></a>
+                <a class="link link-social" href="facebook.com"><img class="image-social" src="./media/amazon-white.png" alt="Italian Trulli"><div class="text-social">Amazon</div></a>
                 </div>
             </div>
+        </div>
 
     </body>
     <script> </script>
