--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <meta name="msapplication-TileColor" content="#da532c">
             <meta name="theme-color" content="#ffffff">
             <title>Contenance.</title>
-            <link href="style4.css" rel="stylesheet" />
+            <link href="style.css" rel="stylesheet" />
             <link href="https://fonts.googleapis.com/css2?family=PT+Sans" rel="stylesheet">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -58,7 +58,8 @@
                 <img id="image-home" src="./media/elefant1.jpg" alt="Italian Trulli">
             </div>
         </div>
-        <div id = "footer">
+        <div id = "footer-container">
+            <div id = "footer">
                 <div class="footer-colomn">
                     <img id="image-logo-footer" src="./media/logo5.png" alt="Italian Trulli">
                     <div>A Berlin based Sports Brand.</div>
@@ -78,6 +79,7 @@
                 <a class="link link-social" href="facebook.com"><img class="image-social" src="./media/amazon-white.png" alt="Italian Trulli"><div class="text-social">Amazon</div></a>
                 </div>
             </div>
+        </div>
 
     </body>
     <script> </script>
