--- a/korkblock.html
+++ b/korkblock.html
@@ -76,9 +76,17 @@
                             <div class="info-text">Yoga Kork Blöcke unterstützen dabei die Körperhaltung zu stabilisieren und einen sicheren Stand zu erlangen, wodurch Verletzung und Überbelastung vorgebeugt und jedem erlaubt wird sicher und gestützt in schwierige Haltungen zukommen und das Potential aus jeder Übung auszuschöpfen. </div>
                     </div>
                 </div>
+                <div class="container-product container-product-small">
+                        <div class="product-info">
+                                <div class="info-title">Robust &amp; Nachhaltig: Genießen Sie das wertvolle Gefühl von Naturkork</div>
+                                <div class="info-text">Nachhaltigkeit gehört zum absoluten Kern unserer Arbeit. Da die expansive Nutzung der Natur die Tragfähigkeit der Erde übersteigt, werden wir ohne Nachhaltigkeit nicht mehr in der Lage sein, unseren Kindern eine lebenswerte und gestaltbare Welt zu hinterlassen.  Als naturfreundliches Sport-Unternehmen aus Berlin setzen wir nachhaltige Entwicklung in den Fokus unserer Praxis und leisten einen Beitrag dazu, dass eine nachhaltige Welt Wirklichkeit wird.</div>
+                        </div>
+                        <img class="image-product image-product-small-right" src="./media/cork.jpg" alt="Italian Trulli">
+                    </div>
             </div>
         </div>
-        <div id = "footer">
+        <div id = "footer-container">
+            <div id = "footer">
                 <div class="footer-colomn">
                     <img id="image-logo-footer" src="./media/logo5.png" alt="Italian Trulli">
                     <div>A Berlin based Sports Brand.</div>
@@ -94,10 +102,11 @@
                 <div class="footer-colomn">
                     <div class="footer-title">SOCIALMEDIA</div>
                     <a class="link link-social" href="facebook.com"><img class="image-social" src="./media/instagram-white.png" alt="Italian Trulli"><div class="text-social">Instagram</div></a>
-                    <a class="link link-social" href="facebook.com"><img class="image-social" src="./media/facebook-white.png" alt="Italian Trulli"><div class="text-social">Facebook</div></a>
-                    <a class="link link-social" href="facebook.com"><img class="image-social" src="./media/amazon-white.png" alt="Italian Trulli"><div class="text-social">Amazon</div></a>
+                <a class="link link-social" href="facebook.com"><img class="image-social" src="./media/facebook-white.png" alt="Italian Trulli"><div class="text-social">Facebook</div></a>
+                <a class="link link-social" href="facebook.com"><img class="image-social" src="./media/amazon-white.png" alt="Italian Trulli"><div class="text-social">Amazon</div></a>
                 </div>
             </div>
+        </div>
 
     </body>
     <script> </script>
