--- a/korkset.html
+++ b/korkset.html
@@ -100,12 +100,26 @@
                     </div>
                     <img class="image-product image-product-small-right" src="./media/korkset6.jpg" alt="Italian Trulli">
                 </div>
+                <div class="container-product container-product-small">
+                    <img class="image-product image-product-small" src="./media/cork.jpg" alt="Italian Trulli">
+                    <div class="product-info product-info-right">
+                            <div class="info-title">Robust &amp; Nachhaltig: Genießen Sie das wertvolle Gefühl von Naturkork</div>
+                            <div class="info-text">Nachhaltigkeit gehört zum absoluten Kern unserer Arbeit. Da die expansive Nutzung der Natur die Tragfähigkeit der Erde übersteigt, werden wir ohne Nachhaltigkeit nicht mehr in der Lage sein, unseren Kindern eine lebenswerte und gestaltbare Welt zu hinterlassen.  Als naturfreundliches Sport-Unternehmen aus Berlin setzen wir nachhaltige Entwicklung in den Fokus unserer Praxis und leisten einen Beitrag dazu, dass eine nachhaltige Welt Wirklichkeit wird.</div>
+                    </div>
+                </div>
                 <div class="container-product container-product-amazon">
                     <img class="image-product" src="./media/korkset1.jpg" alt="Italian Trulli">
+                    <div class="product-info product-info-amazon">
+                        <a target="_blank" class="link link-amazon" href="https://www.amazon.de/Contenance-%C2%AE-Premium-Kork-Yoga-Set-Nachhaltig/dp/B07V9SSQDN/ref=sr_1_2?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=contenance+kork&qid=1601640143&sr=8-2">
+                            <img class="image-amazon" src="./media/amazon.svg" alt="Italian Trulli">
+                            <div class="buy-amazon">Jetzt Kaufen</div>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
-        <div id = "footer">
+        <div id = "footer-container">
+            <div id = "footer">
                 <div class="footer-colomn">
                     <img id="image-logo-footer" src="./media/logo5.png" alt="Italian Trulli">
                     <div>A Berlin based Sports Brand.</div>
@@ -121,10 +135,11 @@
                 <div class="footer-colomn">
                     <div class="footer-title">SOCIALMEDIA</div>
                     <a class="link link-social" href="facebook.com"><img class="image-social" src="./media/instagram-white.png" alt="Italian Trulli"><div class="text-social">Instagram</div></a>
-                    <a class="link link-social" href="facebook.com"><img class="image-social" src="./media/facebook-white.png" alt="Italian Trulli"><div class="text-social">Facebook</div></a>
-                    <a class="link link-social" href="facebook.com"><img class="image-social" src="./media/amazon-white.png" alt="Italian Trulli"><div class="text-social">Amazon</div></a>
+                <a class="link link-social" href="facebook.com"><img class="image-social" src="./media/facebook-white.png" alt="Italian Trulli"><div class="text-social">Facebook</div></a>
+                <a class="link link-social" href="facebook.com"><img class="image-social" src="./media/amazon-white.png" alt="Italian Trulli"><div class="text-social">Amazon</div></a>
                 </div>
             </div>
+        </div>
 
     </body>
     <script> </script>
