--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <div id="container-content">
             <div id="content">
                 <img id="image-home" src="./media/elefant1.jpg" alt="Italian Trulli">
+                <div id="slogan">INSIDE MOVES.</div>
             </div>
         </div>
         <div id = "footer-container">
